--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,9 +1,26 @@
-<h1>Stupid Coaching</h1>
+<div class="container">
+  <h1>Stupid Coaching</h1>
 
-<p><%= @question %></p>
-<em>-You</em>
+  <div class="bubble">
+    <div class="spacer"></div>
+    <div class="sentence">
+      <p>
+        <%= @question %>
+        <br>
+        <em>-You</em>
+      </p>
+    </div>
+  </div>
 
-<p><%= @answer %></p>
-<em>-Your coach</em>
-
-<p><%= link_to "Ask a new question", ask_path %></p>
+  <div class="bubble">
+    <div class="spacer"></div>
+    <div class="sentence answer">
+      <p>
+        <%= @answer %>
+        <br>
+        <em>-Your coach</em>
+      </p>
+    </div>
+  </div>
+  <p><%= link_to "Ask a new question", ask_path %></p>
+</div>
